feat(scss): add styles

--- a/apps/frontend/client/src/app/app.component.html
+++ b/apps/frontend/client/src/app/app.component.html
@@ -1,1 +1,3 @@
-<svvs-nx-welcome></svvs-nx-welcome> <router-outlet></router-outlet>
+<p class="demo">Start</p>
+<!-- <svvs-nx-welcome></svvs-nx-welcome> 
+    <router-outlet></router-outlet> -->
