--- a/apps/frontend/client/src/app/app.component.html
+++ b/apps/frontend/client/src/app/app.component.html
@@ -1,3 +1,15 @@
-<p class="demo">Start</p>
 <!-- <svvs-nx-welcome></svvs-nx-welcome> 
     <router-outlet></router-outlet> -->
+<div class="container">
+    <div>
+        <h2 class="test-ff">sdsdsd</h2>
+        <button mat-raised-button color="primary">Primary</button>
+        <button mat-raised-button color="accent">Accent</button>
+        <button mat-icon-button matTooltip="Primary" color="primary" aria-label="Example icon-button with a heart icon">
+            <mat-icon>favorite</mat-icon>
+          </button>
+          <button mat-icon-button matTooltip="Accent" color="accent" aria-label="Example icon-button with a heart icon">
+            <mat-icon>favorite</mat-icon>
+          </button>
+    </div>
+</div>
